@@ -30,41 +30,27 @@
 %% @var{args} are documented below.
 %%
 %%
-%% Get the current @strong{Python executable} path/name:
+%% Get the name of the @strong{Python executable}:
 %% @example
 %% @comment doctest: +SKIP
 %% sympref python
 %%   @result{} ans = python
 %% @end example
 %%
-%% By default, this value is first taken from an environment
-%% variable called @code{PYTHON}.  This can be configured
-%% in the OS or it can be set within Octave using:
+%% This value can be changed by setting the environment variable
+%% @code{PYTHON}, which can be configured in the OS, or it can be
+%% set within Octave using:
 %% @example
 %% @comment doctest: +SKIP
-%% setenv('PYTHON', '/usr/bin/python')
+%% setenv PYTHON /usr/bin/python
+%% setenv PYTHON C:\Python\python.exe
 %% sympref reset
 %% @end example
+%% (In older versions, @code{sympref python /bin/python} could be
+%% used: this has been removed.)
 %%
-%% Alternatively, the environment variable can be overriden by:
-%% @example
-%% @group
-%% @comment doctest: +SKIP
-%% sympref python '/usr/bin/python'
-%% sympref python 'C:\Python\python.exe'
-%% @end group
-%% @end example
-%%
-%% Finally, if neither is set, the package typically assumes the
-%% command is simply @code{python}.
-%%
-%% The default behaviour can be restored using either:
-%% @example
-%% @comment doctest: +SKIP
-%% sympref python []
-%% sympref('python', '')
-%% @end example
-%% or with `sympref defaults` as noted below.
+%% If the environment variable is empty or not set, the package
+%% uses a default setting (usually @code{python}).
 %%
 %%
 %% @strong{Display} of syms:
@@ -219,7 +205,6 @@ function varargout = sympref(cmd, arg)
     case 'defaults'
       settings = [];
       settings.ipc = 'default';
-      settings.whichpython = '';
       sympref ('display', 'default')
       sympref ('digits', 'default')
       sympref ('snippet', 'default')
@@ -285,24 +270,15 @@ function varargout = sympref(cmd, arg)
       end
 
     case 'python'
-      if (nargin == 1)
-        DEFAULTPYTHON = 'python';
-        if isempty(settings.whichpython)
-          pyexec = getenv('PYTHON');
-          if (isempty(pyexec))
-            pyexec = DEFAULTPYTHON;
-          end
-        else
-          pyexec = settings.whichpython;
-        end
-        varargout{1} = pyexec;
-      elseif (isempty(arg) || strcmp(arg,'[]'))
-        settings.whichpython = '';
-        sympref('reset')
-      else
-        settings.whichpython = arg;
-        sympref('reset')
+      if (nargin ~= 1)
+        error('please use "setenv" instead of "sympref" to change the python command')
       end
+      DEFAULTPYTHON = 'python';
+      pyexec = getenv('PYTHON');
+      if (isempty(pyexec))
+        pyexec = DEFAULTPYTHON;
+      end
+      varargout{1} = pyexec;
 
     case 'ipc'
       if (nargin == 1)
